# Xhigros

./: Cargo.toml
.github/workflows/: main.yml
prpr/: Cargo.toml
prpr-client/: Cargo.toml
prpr-client/locales/en-US/: about.ftl  settings.ftl
prpr-client/locales/zh-CN/: about.ftl  settings.ftl
prpr-client/src/: page.rs
prpr-client/src/page/: account.rs  settings.rs
prpr-client/src/scene/: main.rs
prpr-macroquad/: Cargo.toml
prpr-macroquad/src/: quad_gl.rs  text.rs  texture.rs
prpr-player/: Cargo.toml
prpr/src/: config.rs  judge.rs  lib.rs
prpr/src/scene/: ending.rs  game.rs
prpr/src/ui/: shading.rs
