[package]
name = "prpr-client"
version = "0.3.2"
edition = "2021"

[lib]
crate-type = ["lib", "cdylib"]

[features]
closed = ["prpr/closed"]

[dependencies]
anyhow = "1.0.68"
base64 = "0.20.0"
chrono = { version = "0.4.23", features = ["serde"] }
futures-util = "0.3.25"
hex = "0.4.3"

image = { version = "0.24.6", default-features = false, features = [
    "png", "jpeg", "gif", "bmp", "ico", "tiff"
] }
lyon = "1.0.1"

macroquad = { path = "../prpr-macroquad" , default-features = false }
md5 = "0.7"

once_cell = "1.17.1"


pollster = "0.2.5"
prpr = { path = "../prpr" }
regex = "1.7.0"

reqwest = { version = "0.11.18", default-features = false, features = ["stream", "rustls-tls"] }


serde = { version = "1.0.160", features = ["derive"] }
serde_json = "1.0.96"

sha2 = "0.10.6"

tokio = { version = "1.28.2", features = ["rt-multi-thread", "sync"] }

uuid7 = "0.3.4"

[target.'cfg(target_os = "android")'.dependencies]
ndk-sys = "0.2"
ndk-context = "0.1"
sasa = { git = "https://github.com/Mivik/sasa", default-features = false, features = ["oboe"] }

[target.'cfg(target_os = "ios")'.dependencies]
objc = "*"
objc-foundation = "*"
